--- a/docs/src/index.scss
+++ b/docs/src/index.scss
@@ -44,6 +44,10 @@
             height: auto;
         }
     }
+    .docs-conf-audio-meter {
+        height: 20px;
+        background-color: #0f0;
+    }
 }
 
 video {
