remove custom render

--- a/docs/src/index.scss
+++ b/docs/src/index.scss
@@ -44,9 +44,13 @@
             height: auto;
         }
     }
-    .docs-conf-audio-meter {
+    .rcw-audio-meter {
         height: 20px;
-        background-color: #0f0;
+
+        &__bar {
+            height: 100%;
+            background-color: #0f0;
+        }
     }
 }
 
