Add an AudioMeter to show local volume change (#97)
* sync from local

* add custom audio meter

* add note

* remove custom render

* destroy audioMonitor when unmount

* wrap Hark implementation

* add note

* remove unused

--- a/docs/src/index.scss
+++ b/docs/src/index.scss
@@ -44,6 +44,14 @@
             height: auto;
         }
     }
+    .rcw-audio-meter {
+        height: 20px;
+
+        &__bar {
+            height: 100%;
+            background-color: #0f0;
+        }
+    }
 }
 
 video {
